--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
           </div>
           <div class="col-sm-6 col-md-3">
             <div class="service-item">
-              <img src="img/logos/aorus.jpg" alt="Img">
+              <img src="img/logos/Aorus.jpg" alt="Img">
               <h4><a href="https://www.aorus.com">CONOCE MAS</a></h4>
 
             </div>
