--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <div class="block">
               <div class="section-title">
                 <h2>¿Quienes somos?&nbsp;</h2>
-                <p>Somos una empresa a nivel local de ventas de hardwar&nbsp; &nbsp;&nbsp;</p>
+                <p>Somos una empresa a nivel local de ventas de hardware&nbsp; &nbsp;&nbsp;</p>
               </div>
               <p>Contamos con importadores que nos ayudan a trar lo ultimo en hardware, en esta pagina encontraras los mejores precios del mercado a la hora de comprar tu hardwar, tambien si compras todos los productos con nuestra empresa te lo ensamblaremos de manera gratuita&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; </p>
             </div>
