--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="row">
           <div class="col-md-10 col-md-offset-2">
             <div class="block">
-              <h1 class="animated fadeInUp">Example </h1>
+              <h1 class="animated fadeInUp">EPSILON </h1>
               <p class="animated fadeInUp">
             </div>
           </div>
